k8s_resource/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpc-test
  name: grpc-test
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grpc-test
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: grpc-test
    spec:
      containers:
      - image: jbaojunior/grpc-test
        imagePullPolicy: Always
        name: grpc-test
        ports:
        - containerPort: 5551
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
