k8s_resource/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  labels:
    app: grpc-test
  name: grpc-test
spec:
  rules:
  - host: grpc-test.casa.com
    http:
      paths:
      - backend:
          service: 
            name: grpc-test
            port:
              number: 5551
        pathType: ImplementationSpecific
  tls:
    - secretName: grpc-test-tls
      hosts:
        - grpc-test.casa.com
